openturns/1.25/_sources/auto_data_analysis/manage_data_and_samples/plot_import_export_sample_csv.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "auto_data_analysis/manage_data_and_samples/plot_import_export_sample_csv.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_auto_data_analysis_manage_data_and_samples_plot_import_export_sample_csv.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_auto_data_analysis_manage_data_and_samples_plot_import_export_sample_csv.py:


Import / export a sample via a CSV file
=======================================

.. GENERATED FROM PYTHON SOURCE LINES 7-8

In this example we are going to import and export a data sample from/to a CSV file.

.. GENERATED FROM PYTHON SOURCE LINES 10-13

.. code-block:: Python

    import openturns as ot









.. GENERATED FROM PYTHON SOURCE LINES 14-15

Create a sample from a 2-d Gaussian distribution.

.. GENERATED FROM PYTHON SOURCE LINES 15-18

.. code-block:: Python

    sample = ot.Normal(2).getSample(5)
    sample.setDescription(["u1", "u2"])








.. GENERATED FROM PYTHON SOURCE LINES 19-21

Write a CSV file.
Warning: the default separator is ';'.

.. GENERATED FROM PYTHON SOURCE LINES 21-23

.. code-block:: Python

    sample.exportToCSVFile("sample.csv", ",")








.. GENERATED FROM PYTHON SOURCE LINES 24-25

Print the content of the written file.

.. GENERATED FROM PYTHON SOURCE LINES 25-29

.. code-block:: Python

    with open("sample.csv", "r") as f:
        for line in f.readlines():
            print(line, end="")





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    "u1","u2"
    6.0820165121876457e-01,-1.2661731022166567e+00
    -4.3826561996041397e-01,1.2054782008285756e+00
    -2.1813852346165143e+00,3.5004208653029067e-01
    -3.5500704918563969e-01,1.4372493101409030e+00
    8.1066798246948368e-01,7.9315601145976999e-01




.. GENERATED FROM PYTHON SOURCE LINES 30-31

Read the previous CSV file.

.. GENERATED FROM PYTHON SOURCE LINES 31-34

.. code-block:: Python

    sample = ot.Sample.ImportFromCSVFile("sample.csv", ",")
    print(sample)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

        [ u1        u2        ]
    0 : [  0.608202 -1.26617  ]
    1 : [ -0.438266  1.20548  ]
    2 : [ -2.18139   0.350042 ]
    3 : [ -0.355007  1.43725  ]
    4 : [  0.810668  0.793156 ]




.. GENERATED FROM PYTHON SOURCE LINES 35-37

ImportFromTextFile can also be used for the same purpose
although it allows more permissive formats with whitespace separator, comments, etc.

.. GENERATED FROM PYTHON SOURCE LINES 37-39

.. code-block:: Python

    sample = ot.Sample.ImportFromTextFile("sample.csv", ",")
    print(sample)




.. rst-class:: sphx-glr-script-out

 .. code-block:: none

        [ u1        u2        ]
    0 : [  0.608202 -1.26617  ]
    1 : [ -0.438266  1.20548  ]
    2 : [ -2.18139   0.350042 ]
    3 : [ -0.355007  1.43725  ]
    4 : [  0.810668  0.793156 ]





.. _sphx_glr_download_auto_data_analysis_manage_data_and_samples_plot_import_export_sample_csv.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_import_export_sample_csv.ipynb <plot_import_export_sample_csv.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_import_export_sample_csv.py <plot_import_export_sample_csv.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: plot_import_export_sample_csv.zip <plot_import_export_sample_csv.zip>`
